src/test/ui/issues/issue-3044.stderr
error[E0308]: mismatched types
  --> $DIR/issue-3044.rs:3:35
   |
LL |       needlesArr.iter().fold(|x, y| {
   |  ___________________________________^
LL | |     });
   | |_____^ expected closure, found `()`
   |
   = note: expected closure `[closure@$DIR/issue-3044.rs:3:28: 4:6]`
            found unit type `()`

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-3044.rs:3:23
   |
LL |     needlesArr.iter().fold(|x, y| {
   |                       ^^^^ an argument of type _ is missing
   |
help: provide the argument
   |
LL |     needlesArr.iter().(|x, y| {
LL |     }, {_})(|x, y| {
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
